# GLFWApp

./: Application.cpp  CMakeLists.txt  GLFWApplication.cpp  GLFWApplication.h  main.cpp
Assets/Shaders/: texture.frag  texture.vert
CV/: CMakeLists.txt  cv_main.cpp  cv_main.hpp
Graphics/: CMakeLists.txt  Shader.cpp  Shader.h
KSIO/: IKSStream.h  KSFileStream.cpp  KSFileStream.h
Logger/: KSLog.hpp
glloader/include/glad/: glad.h
glloader/src/: glad.c
